--- a/francis/composer.json
+++ b/francis/composer.json
@@ -13,7 +13,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+	"php-ffmpeg/php-ffmpeg": "~0.5"
     },
     "autoload": {
         "classmap": [
