--- a/francis/composer.json
+++ b/francis/composer.json
@@ -15,7 +15,8 @@
         "phpspec/phpspec": "~2.1",
         "laravelcollective/html": "~5.0",
 		"aws/aws-sdk-php": "~2.6",
-	   "php-ffmpeg/php-ffmpeg": "~0.5"
+		"php-ffmpeg/php-ffmpeg": "~0.5",
+	    "weboap/visitor": "dev-master"
     },
     "autoload": {
         "classmap": [
